Automatically backed up by Learn

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,17 @@
             <span class="icon-bar"></span>
           </button>
         <a class="navbar-brand" href="<%= root_url %>"/>Home</a>
+        <% if current_user.nil? %>
+          <a class="navbar-brand" href="<%= new_user_url %>">Sign Up</a>
+          <a class="navbar-brand" href="<%= signin_url %>">Sign in</a>
+        <% else %>
+          <a class="navbar-brand" href="<%= user_url(current_user) %>"><%= current_user.name %>'s profile</a>
+          <%= link_to "Log Out", signout_path, method: :post, class: "navbar-brand" %>">
+        <% end %>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            
+
           </ul>
         </div><!--/.nav-collapse -->
       </div>
